--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,10 @@
 <!-- HOME.HTML -->
+{% extends "layout.html" %}
+
+{% block content %}
+
+<h1>Polyrhythm Trainer Home Page</h1>
+<button>Start Learning</button>
+<button id="start-quiz">Start Quiz</button>
+
+{% endblock %}
