fixed route to learn, added quiz route

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h1>Polyrhythm Trainer Home Page</h1>
-<button>Start Learning</button>
+<button id="start-learning">Start Learning</button>
 <button id="start-quiz">Start Quiz</button>
 
 {% endblock %}
