--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,29 +3,42 @@
 <!doctype html>
 <html lang="en">
     <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="data:,">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="data:,">
 
-    <!-- jquery -->
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <!-- Meta tags for progress bar -->
+        <meta id="app-data" 
+            data-total-lessons="{{ lecture|length }}"
+            data-total-questions="{{ questions|length }}"
+            data-total-match-quizzes="{{ match_quizzes|length }}">
+        <!-- jquery -->
+        <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
-    <!-- Roboto Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <!-- Roboto Font -->
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <!-- Main CSS and JS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='quiz.js') }}"></script>
+        <!-- Main CSS and JS -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+        <script type="text/javascript" src="{{ url_for('static', filename='quiz.js') }}"></script>
 
-    <title>Polyrhythm Trainer</title>
+        <title>Polyrhythm Trainer</title>
     </head>
 
     <body>
+        <!-- Progress Bar Container -->
+        <div class="progress-container">
+            <div class="progress" id="progress-bar">
+                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="step-labels" id="step-labels"></div>
+        </div>
+        <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">Polyrhythm Trainer</a>
             <div class="container">
