--- a/static/main.css
+++ b/static/main.css
@@ -229,7 +229,7 @@ h2 {
 }
 
 .qz-match-audio-wrapper iframe {
-    width: 60%;
+    width: 100%;
     height: 200px;
     border: none;
 }
@@ -375,4 +375,9 @@ h2 {
 
 .match-quiz .qz-draggable-container {
     margin-top: 90px;
+}
+
+.result-text{
+    color: black;
+    font-size: 40px;
 }
