--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,6 +49,12 @@
                     <div class="navbar-nav">
                         <a class="nav-link" href="/">Home</a>
                     </div>
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="/learn/1">Learn</a>
+                    </div>
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="/quiz/0">Quiz</a>
+                    </div>
                 </div>
             </div>
         </nav>
