--- a/templates/match_results.html
+++ b/templates/match_results.html
@@ -8,8 +8,10 @@
 <body>
   <div class="qz-container">
     <h2>Your Score for the Match Quiz</h2>
-    <p>You scored {{ score }} out of {{ total }}!</p>
-
+    <p>You scored </p>
+    <br>
+    <h1 class="result-text"><b>{{ score }} out of {{ total }}</b></h1>
+    <br>
 
     <p><strong>{{ message }}</strong></p>
 
