--- a/templates/results.html
+++ b/templates/results.html
@@ -9,8 +9,10 @@
 <body>
   <div class="qz-container">
     <h2>Your Score</h2>
-    <p>You answered {{ score }} out of {{ total }} questions correctly!</p>
-    <p>Redirecting you to the mix & match quiz...</p>
+    <p>You answered </p>
+    <br>
+    <h1 class="result-text"><b>{{ score }} out of {{ total }}</b> questions correctly!</h1>
+    <p>Redirecting you to the <b>mix & match quiz...</b></p>
   </div>
 </body>
 </html>
