--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1>Polyrhythm Trainer Home Page</h1>
+<h1>Polyrhythm Trainer 🥁</h1>
 
 
 <div style="text-align: center; margin-bottom: 20px;">
