--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,8 @@
 <div style="text-align: center;">
     <img src="https://avatars.mds.yandex.net/get-shedevrum/11425623/img_0779e920eb1d11eeb2bc9a79ffaf5bd2/orig"
          alt="Drumming Illustration"
-         style="max-width: 50%; height: auto;">
+         style="max-width: 25%; height: auto;">
+    <p class="home-text">Do you find learning polyrhythms difficult? If so, you’ve come to the right place! A polyrhythm occurs when two or more very different rhythms are played at the same time. These rhythms happen within a shared rhythmic cycle.</p>
 </div>
 
 <script>
