--- a/templates/learn.html
+++ b/templates/learn.html
@@ -11,7 +11,8 @@
     <div class="video-container">
         <iframe width="560" height="315" src="{{current_lesson.video_link.replace('youtu.be', 'www.youtube.com/embed')}}" frameborder="0" allowfullscreen></iframe>
     </div>
-    <p>{{current_lesson.text}}</p>
+    <p class="learning-text">{{current_lesson.text}}</p>
+    <p class="mnemonic">{{current_lesson.mnemonic}}</p>
 </div>
 <div class="navigation-buttons">
     {% if prev_lesson %}
